# tseg

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
[archived] yolo-model-training/: README.md  augment.py  train.py  tune.py
[archived]-yolo-model-training/: README.md  augment.py  train.py  val.py  yolo_dataset.yaml
dataset-prep/: README.md  data.yaml  mask_to_yolo.py  requirements.txt  split.py
dataset-preparation/: README.md  config.yaml  extract_polygons.py  main.py  prepare.py  tseg_filter.py  tseg_mask_to_yolo.py  tseg_merge.py  tseg_split.py
dataset-preparation/tseg/: __init__.py  data_ops.py  dataset.py  dataset_yolo.py  extract_polygons.py  image_ops.py  split.py  utils.py  yolo_formatter.py
dataset-preparation/tseg/yolo/: __init__.py  convert_yolo.py  dataset_yolo.py
model-training/: README.md  aug_train.py  augment.py  convert.py  dataset.py  metrics.py  model.py  notebook.ipynb  notebook.py  test.py  train.py  tune.py  val.py
model-training/augment/: __init__.py  basic.py  heavy.py  stain.py
model-training/dataset/: __init__.py  base.py  filter.py  slide.py  utils.py  weight.py
model-training/losses/: __init__.py  segment.py
model-training/metrics/: __init__.py  segment.py
model-training/model/: __init__.py  smp.py  utils.py
model-training/notebooks/: confidence.ipynb  metadata.ipynb  notebook.ipynb  notebook.py  subset.ipynb
model-training/sampler/: __init__.py  limit.py  slide.py
model-training/utils/: __init__.py  config.py  image.py  misc.py  visualize.py
qupath-script/: README.md  script.groovy
qupath-scripts/: README.md  tile_current_image.groovy  tile_multiple_images.groovy  tile_selected_area.groovy
yolo-seg/: README.md  predict.py  train.py
yolo-segmentation/: README.md  aug_train.py  requirements.txt  train.py
yolo-segmentation/performance_metrics/: plots.ipynb  results.csv
