[project]
name = "tseg"
version = "0.1.0"
description = "Tumorous area segmentation with YOLO-based models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.5",
    "loguru>=0.7.3",
    "opencv-python>=4.8.0.74",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
    "ultralytics>=8.3.86",
    "wandb>=0.19.6",
]

[dependency-groups]
dev = [
    "lightning>=2.5.1",
    "segmentation-models-pytorch>=0.4.0",
]
