[project]
name = "tseg"
version = "0.1.0"
description = "Tumorous area segmentation with segmentation models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "polars>=1.29.0",
    "tqdm>=4.67.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "typer>=0.15.1",
    "mlflow>=2.22.0",
    "opencv-contrib-python>=4.11.0.86",
    "segmentation-models-pytorch>=0.5.0",
    "albumentations>=2.0.8",
    "torchinfo>=1.8.0",
    "torchstain>=1.4.1",
    "scikit-image>=0.25.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "marimo[recommended]>=0.13.10",
]
